--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,8 +1,14 @@
-This transport requires jzmq: the ZeroMQ Java language binding. Once you have it compiled for your platform and
-installed, the transport must to be included in Mule's classpath.
+Runtime requirements:
 
-In addition, the Java VM's native library path must point jzmq's lib folder. This is done by setting the
-"java.library.path" property (e.g., -Djava.library.path=/opt/jzmq/lib).
+- Mule 3.2.1
+- ZeroMQ 2.2
+- jzmq 1.0.0 (ZeroMQ Java language binding)
 
-To package the transport, install Maven and from the project's root folder enter the following command:
-"mvn package -Djzmq.path=[jzmq path]"
+
+Installation instructions:
+
+1. Install Maven and from the console enter the following command in the project's root folder:
+   "mvn package -Djzmq.path=[jzmq path]". This will produce a JAR called "mule-transport-zeromq-[version].jar".
+2. Add the ZeroMQ transport JAR to Mule's class path.
+3. Point Mule's Java VM native library path to jzmq's lib folder
+   (e.g., -Djava.library.path=/opt/jzmq/lib).
