--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -7,8 +7,10 @@ Runtime requirements:
 
 Installation instructions:
 
-1. Install Maven and from the console enter the following command in the project's root folder:
+1. Install Maven and from your console enter the following command in the project's root folder:
    "mvn package -Djzmq.path=[jzmq path]". This will produce a JAR called "mule-transport-zeromq-[version].jar".
+
 2. Add the ZeroMQ transport JAR to Mule's class path.
+
 3. Point Mule's Java VM native library path to jzmq's lib folder
    (e.g., -Djava.library.path=/opt/jzmq/lib).
